--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,3 +3,7 @@
 @import "pages/home/second-screen";
 @import "pages/home/third-screen";
 @import "pages/home/fourth-screen";
+@import "pages/home/fifth-screen";
+@import "pages/home/sixth-screen";
+@import "pages/home/services";
+@import "pages/home/prefooter";
