--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'fonts';
 @import 'utils/typography';
 @import 'all-pages/header';
+@import 'all-pages/footer';
 @import 'libs/swiper';
 body{
     // background-color: rgba(0, 0, 0, 0.376);
