--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,4 +6,5 @@
 @import "pages/home/fifth-screen";
 @import "pages/home/sixth-screen";
 @import "pages/home/services";
+@import "pages/home/site-development";
 @import "pages/home/prefooter";
