--- a/src/scss/all-pages/footer.scss
+++ b/src/scss/all-pages/footer.scss
@@ -1,16 +1,30 @@
 .footer {
+  ::-webkit-scrollbar {
+    background: #FFFFFF;
+    border-radius: 20px;
+    width: 5px;
+    height: 140px;
+  }
   &-inner {
-    padding: 2rem $paddingLeft;
+    padding: 0 $paddingLeft;
     display: flex;
     justify-content: center;
-
+    background: linear-gradient(to right, #0087D2 50%, #003566 50%);
+    max-height: 480px;
   }
 
   &-container {
     display: flex;
-    background: #0087D2;
+    justify-content: space-between;
+    background-color: #0087D2;
   }
 
+  &-block {
+    margin-right: 20px;
+    max-width: 500px;
+    padding-bottom: 30px;
+    padding-top: 30px;
+  }
 
   &-blog {
     display: flex;
@@ -26,6 +40,15 @@
       font-weight: 400;
       line-height: 15.15px;
       color: $white;
+      cursor: pointer;
+      clip-path: polygon(0% 0%, 95% 0%, 100% 50%, 95% 100%, 0% 100%);
+
+      &-img {
+        width: 7rem;
+        height: 5rem;
+        margin-right: -1rem;
+       margin-left: -3rem;
+      }
     }
 
     &-text {
@@ -35,6 +58,8 @@
       line-height: 15.15px;
       color: $white;
       margin-left: 30px;
+      text-decoration: underline;
+      cursor: pointer;
     }
   }
 
@@ -45,6 +70,7 @@
     &-img {
       width: 196px;
       height: 236px;
+      object-fit: cover;
     }
 
     &-main {
@@ -82,7 +108,13 @@
   &-list {
     display: flex;
     flex-direction: column;
-    margin-right: 1rem;
+    overflow: auto;
+    max-height: 480px;
+    height: auto;
+    max-width: 410px;
+    margin-left: 20px;
+    padding-bottom: 30px;
+    padding-top: 30px;
 
     &-item {
 
@@ -116,8 +148,11 @@
 
 
   &-contacts {
-    background: #003566;
-    margin-left: 47px;
+background-color: #003566;
+    padding-left: 47px;
+    max-width: 237px;
+    padding-bottom: 30px;
+    padding-top: 30px;
 
     &-logo {
 
