--- a/src/scss/pages/home/fifth-screen.scss
+++ b/src/scss/pages/home/fifth-screen.scss
@@ -38,11 +38,17 @@
     justify-content: space-around;
 
     &-box {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       width: 350px;
       margin-right: 30px;
 
-      &-box-img {
 
+      &-img {
+        width: 10rem;
+        height: 10rem;
+        margin-left: -2rem;
       }
 
       &-title {
@@ -52,6 +58,7 @@
         font-weight: 500;
         line-height: 30px;
         margin-top: 33px;
+        height: 60px;
       }
 
       &-text {
