--- a/src/scss/pages/home/services.scss
+++ b/src/scss/pages/home/services.scss
@@ -1,13 +1,17 @@
 .services {
 
+
   &-inner {
     padding: 2rem $paddingLeft;
     display: flex;
     justify-content: center;
+    position: relative;
   }
 
   &-wrapper {
     @include widthContainer;
+    display: flex;
+    flex-direction: column;
   }
 
   .page-breadcrumbs {
@@ -27,11 +31,24 @@
     }
 
     &-arrow {
-      width: 8px;
-      height: 7px;
+      width: 3rem;
+      height: 3rem;
     }
 
   }
+
+  &-container {
+    display: flex;
+    margin-top: 25px;
+
+  }
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+      margin-left: 20px;
+    }
+
 
   .page-title {
     font-family: UZSans;
@@ -50,13 +67,12 @@
     border: 1px solid #F1F1F1;
     border-radius: 3px;
     width: 305px;
-    height: 370px;
+    height: 420px;
     padding: 40px 48px 23px 48px;
 
     &-img {
-      width: 29px;
-      height: 26px;
-
+      width: 8rem;
+      height: 8rem;
     }
 
     &-title {
@@ -65,19 +81,22 @@
       font-weight: 700;
       font-size: 25px;
       line-height: 160%;
+      margin-top: 20px;
     }
 
-    &-state {
+    &-text {
       font-family: UZSans;
       font-style: normal;
       font-weight: 350;
       font-size: 15px;
       line-height: 160%;
       text-align: center;
+      margin-top: 22px;
     }
 
     &-btn {
       @include detailsButton;
+      margin-top: 20px;
     }
 
     .page-arrow {
@@ -89,25 +108,219 @@
       align-items: center;
       justify-content: space-between;
       width: 25rem;
+      margin-top: 25px;
+    }
+
+    &-icon {
+      width: 7rem;
+      height: 7rem;
     }
 
   }
 
   &-block {
+    margin-top: 5rem;
 
     &-item {
+      display: inline-block;
       font-family: UZSans;
       font-style: normal;
       font-weight: 400;
       font-size: 15px;
       line-height: 15px;
+      color: #B1B1B1;
+      border: 1px solid #B1B1B1;
+      padding: 10px;
+      margin: 5px;
     }
   }
 
-  .page-list-img {
-    width: 16px;
-    height: 16px;
+  &-image {
+    //background-image: url('/img/services/vectors.png');
+    height: 400px;
+    margin-top: 100px;
+
+    &-additional-1 {
+      position: absolute;
+      width: 280px;
+      height: 196px;
+      left: 10px;
+      top: 600px;
+      z-index: 9;
+    }
+
+    &-main {
+      position: absolute;
+      width: 500px;
+      height: 350px;
+      left: 825px;
+      top: 440px;
+    }
+
+    &-additional-2 {
+      position: absolute;
+      width: 280px;
+      height: 196px;
+      left: 1640px;
+      top: 460px;
+      z-index: 9;
+    }
+
+    &-vectors {
+      position: absolute;
+      width: 1919px;
+      height: 239.97px;
+      left: -2px;
+      top: 520px;
+    }
+  }
+
+  &-lower {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-right: 400px;
+    margin-bottom: 70px;
+  }
+
+  &-name {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 300px;
+    margin-right: 140px;
+
+    .swiper-arrows {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 4rem;
+      border-width: 1px;
+
+      .swiper-arrow {
+        width: 3.5rem;
+        height: 3.5rem;
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .swiper-arrow-next {
+        transform: rotate(180deg);
+      }
+      }
+
+
+    &-title {
+      font-family: UZSans;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 70px;
+      line-height: 62.3px;
+      color: #EBEBEB;
+      margin-top: 30px;
+    }
+
+    &-title-2 {
+      font-family: UZSans;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 30px;
+      line-height: 26.71px;
+      color: #EBEBEB;
+      margin-top: 30px;
+      margin-bottom: -2rem;
+    }
+
+    .details-btn {
+      @include detailsButton;
+      margin-top: 100px;
+
+      .page-arrow {
+        width: 3rem;
+        height: 3rem;
+      }
+    }
+
+    &-description {
+      max-width: 410px;
+      margin-right: 10rem;
+      max-height: 350px;
+      overflow: hidden;
+
+      &-text {
+        font-family: UZSans;
+        font-style: normal;
+        font-weight: 350;
+        font-size: 18px;
+        line-height: 160%;
+      }
+
+      &-text:not(:last-child) {
+        margin-bottom: 2rem;
+      }
+
+    }
+  }
+
+    .page-list {
+      display: flex;
+      flex-direction: column;
+      max-width: 410px;
+      margin-right: 10rem;
+
+      &-title {
+        font-family: UZSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 160%;
+
+      }
+
+      &-list {
+        display: flex;
+        flex-direction: column;
+        margin: 30px 0;
+
+      }
+
+      &-item {
+        display: flex;
+        align-items: flex-start;
+      }
+
+      &-img {
+        width: 5rem;
+        height: 5rem;
+        margin-left: -1.5rem;
+        margin-top: -0.8rem;
+      }
+
+      &-text {
+        font-family: UZSans;
+        font-style: normal;
+        font-weight: 350;
+        font-size: 18px;
+        line-height: 160%;
+      }
+
+    }
+
+  .bitrix-gallery {
+    display: flex;
+
+    &-item {
+      max-width: 305px;
+    }
+
+
+    &-item:not(:last-child) {
+      margin-right: 15rem;
+    }
+  }
 
 }
 
-}
