add services styles

--- a/src/scss/pages/home/fifth-screen.scss
+++ b/src/scss/pages/home/fifth-screen.scss
@@ -35,7 +35,7 @@
   &-container {
     display: flex;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-between;
 
     &-box {
       display: flex;
