--- a/src/scss/pages/home/sixth-screen.scss
+++ b/src/scss/pages/home/sixth-screen.scss
@@ -45,6 +45,7 @@
         font-weight: 500;
         line-height: 30px;
         margin-bottom: 20px;
+        margin-right: 20px;
       }
 
       &-point {
