--- a/src/scss/pages/home/first-screen.scss
+++ b/src/scss/pages/home/first-screen.scss
@@ -6,6 +6,11 @@
     padding: 2rem $paddingLeft;
     display: flex;
     justify-content: center;
+
+    @media screen and (max-width: 1024px) {
+      overflow: hidden;
+
+    }
   }
   &-wrapper {
     @include widthContainer;
@@ -108,6 +113,7 @@
         align-items: center;
         font-size: 2.5rem;
         transition: transform 200ms ease-in;
+
       }
       &:hover {
         .first-screen-facts-item-ico {
@@ -124,6 +130,11 @@
         }
       }
     }
+    &-item:not(:first-child) {
+    @media screen and (max-width: 400px) {
+      display: none;
+    }
+  }
   }
   &-separator{
     @include separator;
