--- a/src/scss/pages/home/fifth-screen.scss
+++ b/src/scss/pages/home/fifth-screen.scss
@@ -16,6 +16,9 @@
 
   &-subtitle {
     padding-top: 2rem;
+    @media screen and (max-width: 1024px) {
+      text-align: center;
+    }
     li {
       align-self: center;
       font-size: 2.7rem;
@@ -30,12 +33,19 @@
     font-size: 3rem;
     margin-bottom: 3rem;
     color: $white;
+    @media screen and (max-width: 1024px) {
+      text-align: center;
+    }
   }
 
   &-container {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    @media screen and (max-width: 800px) {
+      flex-direction: column;
+      align-items: center;
+    }
 
     &-box {
       display: flex;
@@ -43,31 +53,43 @@
       align-items: flex-start;
       width: 350px;
       margin-right: 30px;
+      @media screen and (max-width: 800px) {
+        align-items: center;
+      }
 
 
       &-img {
-        width: 10rem;
-        height: 10rem;
-        margin-left: -2rem;
+          width: 10rem;
+          height: 10rem;
+          margin-left: -2rem;
+
       }
 
       &-title {
         color: $white;
         font-family: UZSans;
-        font-size: 25px;
+        font-size: 5rem;
         font-weight: 500;
-        line-height: 30px;
+        line-height: 8rem;
         margin-top: 33px;
         height: 60px;
+        @media screen and (max-width: 800px) {
+          font-size: 8rem;
+        }
       }
 
       &-text {
         color: $white;
         font-family: UZSans;
-        font-size: 20px;
+        font-size: 4rem;
         font-weight: 350;
-        line-height: 32px;
-        margin-top: 30px;
+        line-height: 8rem;
+        margin-top: 120px;
+        @media screen and (max-width: 800px) {
+          font-size: 6rem;
+          text-align: center;
+          margin-top: 15px;
+        }
       }
     }
 
