--- a/src/scss/pages/home/fourth-screen.scss
+++ b/src/scss/pages/home/fourth-screen.scss
@@ -22,5 +22,12 @@
   &-tagline {
     font-size: 3rem;
     margin-bottom: 3rem;
+
+    @media screen and (max-width: 1024px) {
+      text-align: center;
+    }
+  }
+  &-slider {
+
   }
 }
